here goes nothing

--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="assets/style.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="clearFix">
+        <div class="headerBlock clearFix">
+            <div class="nameBlock">
+                <h1>Will Halstead</h1>
+            </div>
+            <div class="navBlock">
+                <p><a href="">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
+                </p>
+            </div>
+        </div>
+    </header>
+    <p>&nbsp;</p>
+    <main>
+        <div class="contentBlock">
+            <h1>Contact</h1>
+            <hr class="divider">
+            <form action="" id="Contact">
+                <label for="Name">Name:</label><br>
+                <input type="text" name="Name" placeholder="John Smith"><br>
+                <label for="Email">Email:</label><br>
+                <input type="email" name="Email" placeholder="name@domain.com"><br>
+                <label for="Message">Message:</label><br>
+                <textarea name="Message" rows="10" cols="40"></textarea><br>
+                <input type="submit" name="Submit" class="defaultButton">
+            </form>
+        </div>
+    </main>
+    <footer>
+        <p>Copyright 2019 Will Halstead</p>
+    </footer>
 </body>
+
 </html>
