--- a/portfolio.html
+++ b/portfolio.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="assets/style.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="clearFix">
+        <div class="headerBlock clearFix">
+            <div class="nameBlock">
+                <h1>Will Halstead</h1>
+            </div>
+            <div class="navBlock">
+                <p><a href="index.html">About</a> | <a href="">Portfolio</a> | <a href="contact.html">Contact</a>
+                </p>
+            </div>
+        </div>
+    </header>
+    <p>&nbsp;</p>
+    <main>
+        <div class="contentBlock">
+            <h1>Portfolio</h1>
+            <hr class="divider">
+            <p>Fancy image links here</p>
+        </div>
+    </main>
+    <footer>
+        <p>Copyright 2019 Will Halstead</p>
+    </footer>
+</body><body>
 </body>
+
 </html>
