--- a/index.html
+++ b/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="assets/style.css" rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <header class="clearFix">
+        <div class="headerBlock clearFix">
+            <div class="nameBlock">
+                <h1>Will Halstead</h1>
+            </div>
+            <div class="navBlock">
+                <p><a href="">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
+                </p>
+            </div>
+        </div>
+    </header>
+    <p>&nbsp;</p>
+    <main>
+        <div class="contentBlock">
+            <h1>About Me</h1>
+            <hr class="divider">
+            <img src="https://via.placeholder.com/150" alt="Portrait" class="imgLeft">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin diam sapien, rhoncus ut rhoncus a,
+                efficitur eu justo. Quisque pharetra sem eros, id pulvinar diam tincidunt ut. Morbi porttitor lectus ac
+                nisl ultricies maximus. Nulla sed accumsan sapien, in varius urna. Curabitur tincidunt egestas velit eu
+                dignissim. Phasellus nulla odio, consequat fermentum lacinia eget, pulvinar eget nulla. Donec quis
+                mattis tellus. Quisque ut sem ullamcorper, vehicula magna eget, sagittis diam. Quisque tempus nisi quis
+                felis commodo sodales.
+            </p>
+            <p>
+
+                Proin tempus dapibus justo. Nunc suscipit, quam nec blandit efficitur, libero purus consequat ligula, in
+                semper nunc ante eget risus. Quisque magna sem, semper lacinia sem id, aliquet sodales dolor. Phasellus
+                augue ante, dapibus quis dictum non, varius hendrerit mauris. Mauris eleifend ex in pulvinar aliquet.
+                Aenean aliquam, odio et porta vulputate, nulla tellus tincidunt sem, in convallis est nisi et nibh. In
+                hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada
+                fames ac turpis egestas. Morbi vehicula dui tortor, at facilisis ex consectetur non. Nam mattis, sem eu
+                volutpat aliquam, nisi leo tempor nunc, id porttitor odio nunc quis tortor. Cras est tellus,
+                pellentesque at accumsan a, mollis et ex. Fusce dictum dolor eget mauris ultrices, nec ultrices tortor
+                vehicula. Suspendisse convallis tortor a vulputate semper.
+            </p>
+            <p>
+                Donec vitae metus enim. Duis blandit finibus diam, eu facilisis nisi sollicitudin ut. Nulla suscipit sem
+                aliquet, viverra libero id, semper nisl. Pellentesque velit nisl, ultrices non tellus sed, mollis
+                bibendum velit. Nullam maximus, tellus et pulvinar condimentum, turpis lacus mollis neque, id suscipit
+                eros metus vitae elit. Mauris erat leo, feugiat in pellentesque sit amet, tincidunt eu dui. Morbi cursus
+                imperdiet justo elementum luctus. Nunc dignissim nisi egestas elit auctor ornare. Mauris non eleifend
+                ante, a maximus nulla. Phasellus sagittis est nec elementum egestas. In vitae nisi magna. Nulla ut justo
+                id odio blandit facilisis in eu mauris. Cras pharetra porttitor diam. Integer varius accumsan odio. Sed
+                ac mattis neque.
+            </p>
+        </div>
+    </main>
+    <footer>
+        <p>Copyright 2019 Will Halstead</p>
+    </footer>
 </body>
+
 </html>
