Fixed and updated with (some) real content

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact</title>
     <link href="assets/style.css" rel="stylesheet">
 </head>
 
@@ -28,9 +28,9 @@
             <hr class="divider">
             <form action="" id="Contact">
                 <label for="Name">Name:</label><br>
-                <input type="text" name="Name" placeholder="John Smith"><br>
+                <input type="text" name="Name" class="shortText" placeholder="John Smith"><br>
                 <label for="Email">Email:</label><br>
-                <input type="email" name="Email" placeholder="name@domain.com"><br>
+                <input type="email" name="Email" class="shortText" placeholder="name@domain.com"><br>
                 <label for="Message">Message:</label><br>
                 <textarea name="Message" rows="10" cols="40"></textarea><br>
                 <input type="submit" name="Submit" class="defaultButton">
