--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>About Me</title>
     <link href="assets/style.css" rel="stylesheet">
 
 </head>
@@ -24,39 +24,37 @@
     </header>
     <p>&nbsp;</p>
     <main>
-        <div class="contentBlock">
+        <div class="contentBlock clearFix">
             <h1>About Me</h1>
             <hr class="divider">
-            <img src="https://via.placeholder.com/150" alt="Portrait" class="imgLeft">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin diam sapien, rhoncus ut rhoncus a,
-                efficitur eu justo. Quisque pharetra sem eros, id pulvinar diam tincidunt ut. Morbi porttitor lectus ac
-                nisl ultricies maximus. Nulla sed accumsan sapien, in varius urna. Curabitur tincidunt egestas velit eu
-                dignissim. Phasellus nulla odio, consequat fermentum lacinia eget, pulvinar eget nulla. Donec quis
-                mattis tellus. Quisque ut sem ullamcorper, vehicula magna eget, sagittis diam. Quisque tempus nisi quis
-                felis commodo sodales.
+            <img src="images/Headshot.png" alt="Portrait" class="imgLeft">
+            <p>I'm a secular transhumanist, a SF&amp;F enthusiast, player of games both electronic and tabletop, and an
+                unrepentant technophile. My pronouns are he/him, and I identify as a cisgender male.
             </p>
             <p>
-
-                Proin tempus dapibus justo. Nunc suscipit, quam nec blandit efficitur, libero purus consequat ligula, in
-                semper nunc ante eget risus. Quisque magna sem, semper lacinia sem id, aliquet sodales dolor. Phasellus
-                augue ante, dapibus quis dictum non, varius hendrerit mauris. Mauris eleifend ex in pulvinar aliquet.
-                Aenean aliquam, odio et porta vulputate, nulla tellus tincidunt sem, in convallis est nisi et nibh. In
-                hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                fames ac turpis egestas. Morbi vehicula dui tortor, at facilisis ex consectetur non. Nam mattis, sem eu
-                volutpat aliquam, nisi leo tempor nunc, id porttitor odio nunc quis tortor. Cras est tellus,
-                pellentesque at accumsan a, mollis et ex. Fusce dictum dolor eget mauris ultrices, nec ultrices tortor
-                vehicula. Suspendisse convallis tortor a vulputate semper.
+                Born in the desert wastes of southern California some three dozen years ago, I spent my formative years
+                striving to understand the world around me&mdash;a pursuit that has never ceased since. Migrating to
+                Florida with my family, I adapted to the slightly cooler (though much wetter) climate only under
+                protest. Retreating from the unblinking gaze of the daystar, I dedicated myself to intellectual
+                pursuits, specifically ones that would allow me to stay out of the heat as much as possible.
             </p>
             <p>
-                Donec vitae metus enim. Duis blandit finibus diam, eu facilisis nisi sollicitudin ut. Nulla suscipit sem
-                aliquet, viverra libero id, semper nisl. Pellentesque velit nisl, ultrices non tellus sed, mollis
-                bibendum velit. Nullam maximus, tellus et pulvinar condimentum, turpis lacus mollis neque, id suscipit
-                eros metus vitae elit. Mauris erat leo, feugiat in pellentesque sit amet, tincidunt eu dui. Morbi cursus
-                imperdiet justo elementum luctus. Nunc dignissim nisi egestas elit auctor ornare. Mauris non eleifend
-                ante, a maximus nulla. Phasellus sagittis est nec elementum egestas. In vitae nisi magna. Nulla ut justo
-                id odio blandit facilisis in eu mauris. Cras pharetra porttitor diam. Integer varius accumsan odio. Sed
-                ac mattis neque.
+                My primary foci of interest center around technology, discovery, and playful exploration. I build
+                computers for myself and my friends, engaging in mild-to-moderate hardware modding where needed to
+                achieve the desired result. I have a strong interest in computer games of many sorts, with a special
+                focus on Roleplaying games. Tabletop roleplaying games are another passion of mine, and I have both
+                participated in and run dozens of games over the years. I greatly enjoy creative visual storytelling,
+                and have a special passion for anime and manga. I also enjoy well-written speculative fiction, with my
+                favorite stories being ones that serve equally well as entertainment and education.
+            </p>
+            <p> I live underneath one of the primary inbound glidepaths for Orlando International Airport, close enough
+                that trying to enjoy a nap&mdash;or even an uninterrupted conversation&mdash;in my back yard is an
+                exercise in futility most days.
+            </p>
+            <p>
+                My dream job is something that lets me bend my talents with technology toward the goal of promoting the
+                flourishing of sapient life across the planet, across the solar system, and beyond (if I get really
+                lucky).
             </p>
         </div>
     </main>
