--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link href="assets/style.css" rel="stylesheet">
 </head>
 
@@ -21,18 +21,53 @@
             </div>
         </div>
     </header>
-    <p>&nbsp;</p>
+    <div class="spacerBlock">&nbsp;</div>
     <main>
-        <div class="contentBlock">
+        <div class="contentBlock clearFix">
             <h1>Portfolio</h1>
             <hr class="divider">
-            <p>Fancy image links here</p>
-        </div>
+            <div class="fancyPicture">
+                <img src="images/abstract-blue-waves-pv.jpg" class="thumbnail">
+                <div class="fancyLink">
+                    <a href="">Lorem Ipsum</a>
+                </div>
+            </div>
+            <div class="fancyPicture">
+                <img src="images/christmas-ornament-in-the-snow-with-lights-in-the-background-pv.jpg" class="thumbnail">
+                <div class="fancyLink">
+                    <a href="">Dolor sit Amet</a>
+                </div>
+            </div>
+            <div class="lineBreak"></div>
+            <div class="fancyPicture">
+                <img src="images/colored-pencils-in-a-circle-isolated-on-a-white-background-pv.jpg" class="thumbnail">
+                <div class="fancyLink">
+                    <a href="">Consectetur</a>
+                </div>
+            </div>
+            <div class="fancyPicture">
+                <img src="images/modern-skyscrapers-or.jpg" class="thumbnail">
+                <div class="fancyLink">
+                    <a href="">Phasellus nulla odio</a>
+                </div>
+            </div>
+            <div class="lineBreak"></div>
+            <div class="fancyPicture">
+                <img src="images/a-wind-turbine-in-a-field-pv.jpg" class="thumbnail">
+                <div class="fancyLink">
+                    <a href="">Nunc dignissim</a>
+                </div>
+            </div>
+
+
+        </div> 
     </main>
     <footer>
         <p>Copyright 2019 Will Halstead</p>
     </footer>
-</body><body>
+</body>
+
+<body>
 </body>
 
 </html>
