Patch for portrait weirdness

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="contentBlock clearFix">
             <h1>About Me</h1>
             <hr class="divider">
-            <img src="images/Headshot.png" alt="Portrait" class="imgLeft">
+            <img src="images/Headshot.png" alt="Portrait" class="imgLeft" width="150px">
             <p>I'm a secular transhumanist, a SF&amp;F enthusiast, player of games both electronic and tabletop, and an
                 unrepentant technophile. My pronouns are he/him, and I identify as a cisgender male.
             </p>
