--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
                 <h1>Will Halstead</h1>
             </div>
             <div class="navBlock">
-                <p><a href="">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="contact.html">Contact</a>
+                <p><a href="index.html">About</a> | <a href="portfolio.html">Portfolio</a> | <a href="">Contact</a>
                 </p>
             </div>
         </div>
